--- a/templates/Discord_Exp.html
+++ b/templates/Discord_Exp.html
@@ -9,7 +9,7 @@ COOP-1000 Experience
 <br>
 <div class="DiscordContainer">
     <div class="DiscordImage">
-        <img id="Kartavya-About-Me-Picture" src="{{ url_for('static', filename='/Images/Discord_Exp_2.jpeg') }}" width="400" height="200" alt="COOP 1000 Picture">
+        <img id="DiscordImage" src="{{ url_for('static', filename='/Images/Discord_Exp_2.jpeg') }}" width="400" height="200" alt="Discord Picture">
     </div>
     <div class="DiscordText">
         <div class="Back">
