--- a/static/styleYearInReview.css
+++ b/static/styleYearInReview.css
@@ -29,7 +29,7 @@
 .Sub-Box {
     color: #993500;
     width: 90%;
-    height: 15vh;
+    height: auto;
     margin: 10px 0; /* Add margin for spacing */
     background-color: #FFFCCC;
     margin-left: 20px;
