--- a/templates/Experiences.html
+++ b/templates/Experiences.html
@@ -16,19 +16,35 @@ Experiences
     <div class="Experience">
         <span><h2>Experiences</h2></span>
     </div>
-    <div class="Sub-Box" onclick="goToPage('COOP-1000')">
+    <div class="Sub-Box" onclick="goToPage('ResDash')">
         <div class="Sub-Box-Image">
-            <img src="static/Images/UC_LC.png" alt="UC_LC" width="125" height="125">
+            <img src="static/Images/ResDash.png" alt="ResDash" width="125" height="125">
         </div>
         <div class="Sub-Box-Text">
             <div class="Sub-Box-Date">
-                <h4>January 2023</h4>
+                <h4>May 2023 - August 2023</h4>
             </div>
             <div class="Sub-Box-Title">
-                <h2>COOP 1000 Course</h2>
+                <h2>Python/Flask App Developer</h2>
             </div>
             <div class="Sub-Box-Description">
-                <p>Engaged in COOP 1000 course for personal growth and shared my expertise as an SRS Leader to empower fellow students.</p>
+                <p>Led the development of ResDash webpages, optimizing code, integrating libraries, and enhancing user experience for University of Cincinnati Resident Doctors.</p>
+            </div>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('ByteLinkSys')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/ByteLinkSys.jpeg" alt="ByteLinkSys" width="125" height="125">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>May 2022 - July 2023</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Data Science Intern</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Designed and deployed a global Pneumonia growth analysis PowerBI dashboard with advanced Python and Machine Learning proficiency, utilizing various algorithms and tools.</p>
             </div>
         </div>
     </div>
