Added Everything Other than textdata

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -18,6 +18,7 @@ Portfolio - Kartavya Singh
         <div class="Comment">
             <span>Born a Programmer: Debugging the World, One Line at a Time!</span>
         </div>
+        <a href ="https://mailuc-my.sharepoint.com/:b:/g/personal/singhk6_mail_uc_edu/EcLkg4eHfMJIiUhL2PtXhmoBnA5LUUiZo_E-ki0ekQIX4w?e=4QvCB4" ><button id="resumeButton" class="nav-sub-button" onclick="">Download Resume</button></a><br>
         <button id="projectsButton" class="nav-sub-button" onclick="goToPage('Projects')">Projects</button>
         <button id="experiencesButton" class="nav-sub-button" onclick="goToPage('Experiences')">Experiences</button>
         <button id="contactButton" class="nav-sub-button" onclick="goToPage('Contact')">Contact Me</button>
