--- a/templates/Involvements.html
+++ b/templates/Involvements.html
@@ -16,7 +16,7 @@ Involvements
     <div class="Involvement">
         <span><h2>Involvements</h2></span>
     </div>
-    <div class="Sub-Box" onclick="goToPage('COOP-1000')">
+    <div class="Sub-Box" onclick="goToPage('LC')">
         <div class="Sub-Box-Image">
             <img src="static/Images/LC.jpeg" alt="UC_LC" width="125" height="125">
         </div>
@@ -25,10 +25,74 @@ Involvements
                 <h4>January 2023</h4>
             </div>
             <div class="Sub-Box-Title">
-                <h2>COOP 1000 Course</h2>
+                <h2>University Of Cincinnati<br>Learning Commons</h2>
             </div>
             <div class="Sub-Box-Description">
-                <p>Engaged in COOP 1000 course for personal growth and shared my expertise as an SRS Leader to empower fellow students.</p>
+                <p>Been a Part Of The Learning Commons as an SRS Leader & Mass Tutor</p>
+            </div>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('Honors')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/UHP.jpg" alt="UC_UHP" width="125" height="125">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>December 2022</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>University Of Cincinnati<br>Honors Program</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Part of the University Honors Program</p>
+            </div>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('MUC')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/MUC.png" alt="UC_MUC" width="125" height="125">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>October 2022</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>MAKE UC</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Partook in several Make UC Hackathon</p>
+            </div>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('TCSiON')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/TCSiON.jpg" alt="TCSiON" width="125" height="125">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>August 2022</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>TCS iON<br>Digital Learning Hub</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Partook in Career Edge - Young Professional Courses</p>
+            </div>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('RevUC')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/RevUC.png" alt="REV_UC" width="125" height="125">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>February 2022</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Revolution UC</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Partook in several Revolution UC Hackathon</p>
             </div>
         </div>
     </div>
