--- a/templates/Projects.html
+++ b/templates/Projects.html
@@ -16,19 +16,172 @@ Projects
     <div class="Project">
         <span><h2>Projects</h2></span>
     </div>
-    <div class="Sub-Box" onclick="goToPage('COOP-1000')">
+    <div class="Sub-Box" onclick="goToPage('Portfolio')">
         <div class="Sub-Box-Image">
-            <img src="static/Images/LC.jpeg" alt="UC_LC" width="125" height="125">
+            <img src="static/Images/Portfolio.png" alt="Portfolio" width="150" height="150">
         </div>
         <div class="Sub-Box-Text">
             <div class="Sub-Box-Date">
-                <h4>January 2023</h4>
+                <h4>August 2023</h4>
             </div>
             <div class="Sub-Box-Title">
-                <h2>COOP 1000 Course</h2>
+                <h2>Personal Portfolio Website Project</h2>
             </div>
             <div class="Sub-Box-Description">
-                <p>Engaged in COOP 1000 course for personal growth and shared my expertise as an SRS Leader to empower fellow students.</p>
+                <p>Created a personal portfolio website using Html, CSS, Python and Flask. This website showcases my Projects, Involvements, and Experiences in a user-friendly and visually appealing manner.</p>
+            </div>
+            <br>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('VoiceAssistant')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/VA.png" alt="VA" width="150" height="150">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>July 2023</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Personal Voice Assistant Project</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Designed and implemented a personal voice assistant using natural language processing and speech recognition technologies. This voice assistant can perform various tasks, such as answering questions, setting reminders, and controlling smart home devices, all through voice commands.</p>
+            </div>
+            <br>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('PySnake')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/snakegame.gif" alt="Snake" width="150" height="150">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>March 2023</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Snakes Deep Reinforcement Game</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Developed a deep reinforcement learning-based Snake game, where the snake learns to navigate and optimize its gameplay strategy through AI-driven algorithms.</p>
+            </div>
+            <br>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('BodyRecognition')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/BR.png" alt="BR" width="150" height="150">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>December 2022</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Body & Face Recognition Project</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Implemented a comprehensive body and face recognition system that leverages cutting-edge computer vision techniques, allowing for accurate identification and tracking of individuals in various scenarios.</p>
+            </div>
+            <br>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('PRLWebsite')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/PRL.png" alt="PRL" width="150" height="150">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>August 2022</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Pashupati Road Links Website</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Developed a webiste using HTML and CSS for Pashupati Road Links Transportation establishment.</p>
+            </div>
+            <br>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('ENEDRobot')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/ENED.png" alt="Robot" width="150" height="150">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>November 2021 - May 2022</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Engineering Design Robot</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Designed and programmed a Lego robot with Python that demonstrated advanced capabilities, including precise movement, object lifting, and barcode scanning for item localization.</p>
+            </div>
+            <br>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('PythonChess')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/PythonChess.jpg" alt="Chess" width="150" height="150">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>February 2022</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Intelligent Chess Player vs AI</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Developed a Python-based AI Chess Game that uses machine learning to improve its move selection through iterations.</p>
+            </div>
+            <br>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('SwiftGame')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/swift.png" alt="Swift" width="150" height="150">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>December 2021</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Swift iOS Game Development</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Designed an iOS alien shooting game using Swift.</p>
+            </div>
+            <br>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('Discord')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/Discord_Exp_2.jpeg" alt="Discord" width="150" height="150">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>October 2020 - August 2021</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Discord Bot Developer</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Created a robust Discord utility bot with music, games, and data storage capabilities, and an unique Card Game Appplication.</p>
+            </div>
+            <br>
+        </div>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('SalesManagement')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/loading-gif.gif" alt="SalesManagement" width="25" height="25">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>May 2020</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Sales Management System</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Developed a Sales Management System using Python, encompassing shopkeepers' sales and customer billing management.</p>
             </div>
             <br>
         </div>
