--- a/static/style.css
+++ b/static/style.css
@@ -46,7 +46,7 @@ body {
 .FooterBox {
     background-color: rgba(193, 151, 112, 1);
     width: 100%;
-    height: 15vh;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
