--- a/templates/Projects.html
+++ b/templates/Projects.html
@@ -33,6 +33,23 @@ Projects
             <br>
         </div>
     </div>
+    <div class="Sub-Box" onclick="goToPage('Portfolio')">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/Portfolio.png" alt="Portfolio" width="150" height="150">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date">
+                <h4>August 2023</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Personal Portfolio Website Project</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Created a personal portfolio website using Html, CSS, Python and Flask. This website showcases my Projects, Involvements, and Experiences in a user-friendly and visually appealing manner.</p>
+            </div>
+            <br>
+        </div>
+    </div>
     <div class="Sub-Box" onclick="goToPage('VoiceAssistant')">
         <div class="Sub-Box-Image">
             <img src="static/Images/VA.png" alt="VA" width="150" height="150">
