--- a/templates/Year-In-Review.html
+++ b/templates/Year-In-Review.html
@@ -18,9 +18,8 @@ Year-In-Review
         <h2>Year-In-Review 2022 - 2023</h2>
         <!-- Content for Year-In-Review division goes here -->
     </div>
-    <div class="Sub-Box">
+    <div class="Sub-Box" onclick="goToPage('Year-In-Review-2023-2024')">
         <h2>Year-In-Review 2023 - 2024</h2>
-        <h6 class="HoverText">In Progress...</h6>
         <!-- Content for Honors Experience division goes here -->
     </div>
     <div class="Sub-Box">
