--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="icon" type="image/x-icon" href="/static/Images/Kartavya_Photo_FavIcon.ico">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400&display=swap">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
